# internal/handlers/taskHandlers.go
@@ -20,9 +20,9 @@ func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObj
 	response := tasks.GetTasks200JSONResponse{}
 	for _, tsk := range allTasks {
 		task := tasks.Task{
-			Id:     new(int64),
-			Task:   tsk.Title,
-			IsDone: tsk.Completed,
+			Id:        new(int64),
+			Title:     tsk.Title,
+			Completed: tsk.Completed,
 		}
 		*task.Id = int64(tsk.ID)
 		response = append(response, task)
@@ -32,20 +32,28 @@ func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObj
 }
 
 func (h *Handler) PostTasks(ctx context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
-	taskRequest := request.Body
-	taskToCreate := taskService.Task{
-		Title:     taskRequest.Task,
-		Completed: taskRequest.IsDone,
+	if request.Body == nil {
+		return tasks.PostTasks400Response{}, nil
 	}
+
+	if request.Body.Title == "" {
+		return tasks.PostTasks400Response{}, nil
+	}
+
+	taskToCreate := taskService.Task{
+		Title:     request.Body.Title,
+		Completed: request.Body.Completed,
+	}
+
 	createdTask, err := h.Service.CreateTask(&taskToCreate)
 	if err != nil {
 		return nil, err
 	}
 
 	response := tasks.PostTasks201JSONResponse{
-		Id:     new(int64),
-		Task:   createdTask.Title,
-		IsDone: createdTask.Completed,
+		Id:        new(int64),
+		Title:     createdTask.Title,
+		Completed: createdTask.Completed,
 	}
 	*response.Id = int64(createdTask.ID)
 
@@ -62,18 +70,26 @@ func (h *Handler) DeleteTasksId(ctx context.Context, request tasks.DeleteTasksId
 }
 
 func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRequestObject) (tasks.PatchTasksIdResponseObject, error) {
+	if request.Body == nil {
+		return tasks.PatchTasksId400Response{}, nil
+	}
+
+	if request.Body.Title == nil && request.Body.Completed == nil {
+		return tasks.PatchTasksId400Response{}, nil
+	}
+
 	updatedTask, err := h.Service.UpdateTaskByID(uint(request.Id), &taskService.Task{
-		Title:     *request.Body.Task,
-		Completed: *request.Body.IsDone,
+		Title:     *request.Body.Title,
+		Completed: *request.Body.Completed,
 	})
 	if err != nil {
 		return tasks.PatchTasksId404Response{}, err
 	}
 
 	response := tasks.PatchTasksId200JSONResponse{
-		Id:     new(int64),
-		Task:   updatedTask.Title,
-		IsDone: updatedTask.Completed,
+		Id:        new(int64),
+		Title:     updatedTask.Title,
+		Completed: updatedTask.Completed,
 	}
 	*response.Id = int64(updatedTask.ID)
 
